--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="./to-do-list.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title><img src="../public/tick.png"/>TO-Do App</title>
+    <title>TO-Do App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
